--- a/ProyectoFinal20162017-ejb/pom.xml
+++ b/ProyectoFinal20162017-ejb/pom.xml
@@ -46,14 +46,16 @@
             <artifactId>slf4j-log4j12</artifactId> 
             <version>1.5.6</version>
         </dependency>
-        
-        
-        
         <dependency>
             <groupId>javax</groupId>
             <artifactId>javaee-api</artifactId>
             <version>7.0</version>
             <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.8.6</version>
         </dependency>
     </dependencies>
 
@@ -123,11 +125,4 @@
             </plugin>            
         </plugins>
     </build>
-    <repositories>
-        <repository>
-            <id>unknown-jars-temp-repo</id>
-            <name>A temporary repository created by NetBeans for libraries and jars it could not identify. Please replace the dependencies in this repository with correct ones and delete this repository.</name>
-            <url>file:${project.basedir}/lib</url>
-        </repository>
-    </repositories>
 </project>
